# todo_rust

./: .env  Cargo.toml  README.md
src/: authenticate.rs  db.rs  main.rs  static_files.rs  todo.rs
src/db/: mod.rs  models.rs  schema.rs
src/routes/: authenticate.rs  index.rs  mod.rs  todo.rs
static/css/: tailwind.css
templates/: base.html.tera  index.html.tera
templates/authenticate/: login.html.tera  signup.html.tera
templates/partials/: footer.html.tera  header.html.tera
templates/todo/: detail.html.tera  list.html.tera  new.html.tera
