[package]
name = "todo"
version = "0.0.1"
authors = ["Christian Sakai <christianmsakai@gmail.com>"]

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
serde = "1.0.79"
serde_derive = "1.0.79"

[dependencies.rocket_contrib]
version = "0.3.17"
default-features = false
features = ["tera_templates"]
